sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:24: error: illegal start of simple expression
    if (getCouleur(apresbleu)==BLANC)){
                                     ^